--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,40 @@
   <title>Ondevamos</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :all %>
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <script type="text/javascript">
+    google.load("visualization", "1", {packages:["corechart"]});
+    google.setOnLoadCallback(drawChart);
+    function drawChart() {
+      var data = new google.visualization.DataTable();
+      data.addColumn('string', 'Restaurante');
+      data.addColumn('number', 'Votos');
+      
+      $.get('/restaurantes/count');
+      
+      data.addRows(5);
+      data.setValue(0, 0, 'Work');
+      data.setValue(0, 1, 11);
+      data.setValue(1, 0, 'Eat');
+      data.setValue(1, 1, 2);
+      data.setValue(2, 0, 'Commute');
+      data.setValue(2, 1, 2);
+      data.setValue(3, 0, 'Watch TV');
+      data.setValue(3, 1, 2);
+      data.setValue(4, 0, 'Sleep');
+      data.setValue(4, 1, 7);
+
+      var chart = new google.visualization.PieChart(document.getElementById('grafico'));
+      chart.draw(data, {width: 860, height: 300, title: 'Onde Vamos?'});
+    }
+  </script>
   <%= csrf_meta_tag %>
 </head>
 <body>
   <div class="topbar">
     <div class="fill">
       <div class="container">
-        <a class="brand" href="#">Onde Vamos?</a>
+        <a class="brand" href="/">Onde Vamos?</a>
       </div>
     </div>
   </div>
