--- a/app/views/votos/index.html.erb
+++ b/app/views/votos/index.html.erb
@@ -4,5 +4,12 @@
   <p><%= notice %></p>
 </div>
 <% end %>
+<% if @jaVotou %>
 <%= render 'form' %>
+<% else %>
+<div class="alert-message block-message success">
+  <p>Você já votou para 'Onde vamos' no dia de hoje. Obrigado.</p>
+</div>
+<div id="grafico"></div>
+<% end %>
 
