--- a/app/views/restaurantes/edit.html.erb
+++ b/app/views/restaurantes/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing restaurante</h1>
+<h1>Restaurante</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @restaurante %> |
 <%= link_to 'Back', restaurantes_path %>
