--- a/app/views/votos/index.html.erb
+++ b/app/views/votos/index.html.erb
@@ -9,6 +9,7 @@
   <p>Você já votou para 'Onde vamos' no dia de hoje. Obrigado.</p>
 </div>
 <div id="grafico"></div>
+<%= render_chart(@chart, 'grafico') %>
 <% else %>
 <%= render 'form' %>
 <% end %>
