--- a/app/views/restaurantes/_form.html.erb
+++ b/app/views/restaurantes/_form.html.erb
@@ -1,8 +1,12 @@
 <%= form_for(@restaurante) do |f| %>
+<fieldset>
+  <% if notice %>
+  <div class="alert-message block-message success">
+    <p><%= notice %></p>
+  </div>
+  <% end %>
   <% if @restaurante.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@restaurante.errors.count, "error") %> prohibited this restaurante from being saved:</h2>
-
+    <div class="alert-message block-message error">
       <ul>
       <% @restaurante.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -10,13 +14,15 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :nome %><br />
-    <%= f.text_field :nome %>
+  <div class="clearfix">
+          <%= f.label :nome %>
+    <div class="input">
+      <%= f.text_field :nome, :class => 'xlarge' %>
+    </div>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Salvar', :class => 'btn primary' %>
   </div>
+</fieldset>
 <% end %>
 
