--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -1,8 +1,12 @@
 <%= form_for(@usuario) do |f| %>
+<fieldset>
+  <% if notice %>
+  <div class="alert-message block-message success">
+    <p><%= notice %></p>
+  </div>
+  <% end %>
   <% if @usuario.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@usuario.errors.count, "error") %> prohibited this usuario from being saved:</h2>
-
+    <div class="alert-message block-message error">
       <ul>
       <% @usuario.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -10,16 +14,20 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+  <div class="clearfix">
+    <%= f.label :email %>
+    <div class="input">
+      <%= f.text_field :email %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :senha %><br />
-    <%= f.text_field :senha %>
+  <div class="clearfix">
+    <%= f.label :senha %>
+    <div class="input">
+      <%= f.password_field :senha %>
+    </div>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Salvar', :class => 'btn primary' %>
   </div>
+</fieldset>
 <% end %>
