--- a/app/views/usuarios/edit.html.erb
+++ b/app/views/usuarios/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing usuario</h1>
+<h1>Usuário</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @usuario %> |
-<%= link_to 'Back', usuarios_path %>
