--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -1,25 +1,22 @@
-<h1>Listing usuarios</h1>
+<h1>Usuários</h1>
 
-<table>
+<% if notice %>
+<div class="alert-message block-message success">
+  <p><%= notice %></p>
+</div>
+<% end %>
+
+<table class="bordered-table zebra-striped">
+<thead>
   <tr>
     <th>Email</th>
-    <th>Senha</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
-
+</thead>
 <% @usuarios.each do |usuario| %>
+<tbody>
   <tr>
     <td><%= usuario.email %></td>
-    <td><%= usuario.senha %></td>
-    <td><%= link_to 'Show', usuario %></td>
-    <td><%= link_to 'Edit', edit_usuario_path(usuario) %></td>
-    <td><%= link_to 'Destroy', usuario, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
+</tbody>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Usuario', new_usuario_path %>
