--- a/app/views/usuarios/passwords/edit.html.erb
+++ b/app/views/usuarios/passwords/edit.html.erb
@@ -1,16 +1,32 @@
 <h2>Mudar sua senha</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+<%= devise_error_messages! %>
+<%= f.hidden_field :reset_password_token %>
+<fieldset>
+  <div class="clearfix">
+    <%= f.label :password, "Nova senha" %>
+    <div class="input">
+    <%= f.password_field :password %>
+    </div>
+  </div>
+  <div class="clearfix">
+    <%= f.label :password_confirmation %>
+    <div class="input">
+    <%= f.password_field :password_confirmation %>
+    </div>
+  </div>
+  <div class="clearfix">
+    <%= f.label :email %>
+    <div class="input">
+    <%= f.email_field :email %>
+    </div>
+  </div>
 
-  <div><%= f.label :password, "Nova senha" %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation, "Confirmar senha" %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Mudar senha" %></div>
+  <div class="actions">
+    <%= f.submit "Mudar senha" %>
+  </div>
+</fieldset>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+<%= render :partial => "usuarios/shared/links" %>
