--- a/app/views/usuarios/passwords/new.html.erb
+++ b/app/views/usuarios/passwords/new.html.erb
@@ -1,12 +1,17 @@
 <h2>Perdeu sua senha?</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+<%= devise_error_messages! %>
+<fieldset>
+  <div class="clearfix">
+    <%= f.label :email %>
+    <div class="input">
+    <%= f.email_field :email %>
+    </div>
+  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.submit "Envie-me instruções sobre reiniciar a senha" %></div>
+  <div class="actions"><%= f.submit "Envie-me", :class => 'btn primary' %></div>
+</fieldset>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+<%= render :partial => "usuarios/shared/links" %>
