--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,16 +33,12 @@
     <div class="hero-unit">
       <% if notice %>
       <div class="alert-message block-message success">
-        <ul>
-          <li><%= notice %></li>
-        </ul>
+        <p><%= notice %></p>
       </div>
       <% end %>
       <% if alert %>
       <div class="alert-message block-message error">
-        <ul>
-          <li><%= alert %></li>
-        </ul>
+        <p><%= alert %></p>
       </div>
       <% end %>
       <%= yield %>
