Correção da inclusão dos JS e CSS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,14 @@
 <html>
 <head>
   <title>Ondevamos</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :all %>
+  <%= stylesheet_link_tag 'bootstrap.css', 'ondevamos.css' %>
+  <%= javascript_include_tag 'jquery.js', 'jquery_ujs.js', 'application.js' %>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <%= csrf_meta_tag %>
   <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-27330817-1']);
   _gaq.push(['_trackPageview']);
-
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
