--- a/app/views/votos/home.html.erb
+++ b/app/views/votos/home.html.erb
@@ -1,3 +1,6 @@
+<%= select_tag "grupo_id", options_from_collection_for_select(@grupos, "id", "nome"), { :include_blank => 'Selecione um Grupo'} %>
+<br />
+<br />
 <h1><%= I18n.l Date.today, :format => "%A, %d de %B de %Y"  %></h1>
 <% if @jaVotou %>
 <div class="alert-message block-message success">
@@ -8,4 +11,3 @@
 <% else %>
 <%= render 'form' %>
 <% end %>
-
