Javascript para mudança de grupo

--- a/app/views/votos/_form.html.erb
+++ b/app/views/votos/_form.html.erb
@@ -19,4 +19,5 @@
 <div class="actions-options">
 <%= f.submit 'Votar', :class => 'btn primary large'%>
 </div>
+<%= f.hidden_field :grupo_id  %>
 <% end %>
