--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Ondevamos</title>
   <%= stylesheet_link_tag 'bootstrap.css', 'ondevamos.css' %>
-  <%= javascript_include_tag 'jquery.js', 'jquery-ui.min.js', 'jquery_ujs.js', 'application.js', 'autocomplete-rails.js' %>
+  <%= javascript_include_tag 'jquery.js', 'jquery-ui.min.js', 'jquery_ujs.js', 'application.js' %>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <%= csrf_meta_tag %>
   <% if Rails.env.production? %>
@@ -53,21 +53,32 @@
     </div>
   </div>
   <div class="container">
-    <div class="hero-unit">
-      <% if notice %>
-      <div class="alert-message block-message success">
-        <p><%= notice %></p>
+    <div class="content">
+      <div class="page-header">
+        <h1>Page name <small>Supporting text or tagline</small></h1>
       </div>
-      <% end %>
-      <% if alert %>
-      <div class="alert-message block-message error">
-        <p><%= alert %></p>
+      <div class="row">
+        <div class="span10">
+          <h2>Main content</h2>
+          <% if notice %>
+          <div class="alert-message block-message success">
+            <p><%= notice %></p>
+          </div>
+          <% end %>
+          <% if alert %>
+          <div class="alert-message block-message error">
+            <p><%= alert %></p>
+          </div>
+          <% end %>
+          <%= yield %>
+        </div>
+        <div class="span4">
+          <h3>Secondary content</h3>
+        </div>
       </div>
-      <% end %>
-      <%= yield %>
     </div>
     <footer>
-      <a href="mailto:felix.coutinho@gmail.com"><p>&copy; Felix Coutinho 2011</p></a>
+      <p>&copy; Hadros 2011</p>
     </footer>
   </div>
 </body>
