--- a/app/views/grupos/index.html.erb
+++ b/app/views/grupos/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Grupo</h1>
+<h2>Grupos</h2>
 
 <table class="bordered-table zebra-striped">
   <thead>
     <tr>
       <th>Nome</th>
+      <th></th>
       <th></th>
       <th></th>
     </tr>
@@ -22,4 +23,5 @@
 
 <br />
 
-<%= link_to 'Novo Grupo', new_grupo_path, :class => 'btn primary' %>
+<%= link_to 'Criar um Grupo', new_grupo_path, :class => 'btn primary' %>
+<%= link_to 'Associar-se', new_grupo_path, :class => 'btn' %>
