--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,10 @@
       <div class="container">
         <a class="brand" href="/">Onde Vamos?</a>
         <ul class="nav">
-          <% if usuario_signed_in? %><li><a href="/votos/home">Votação</a></li><% end %>
+          <% if usuario_signed_in? %><li><a href="/votos/home">Votação</a></li>
           <li><a href="/grupos">Grupos</a></li>
           <li><a href="/restaurantes">Restaurantes</a></li>
+          <% end %>
           <li><a href="/sobre">Sobre</a></li>
           <li><a href="/contato">Contato</a></li>
           <% if !usuario_signed_in? %><li><a href="/usuarios/sign_up">Junte-se a nós!</a></li><% end %>
@@ -54,12 +55,13 @@
   </div>
   <div class="container">
     <div class="content">
+      <% if usuario_signed_in? %>
       <div class="page-header">
-        <h1>Page name <small>Supporting text or tagline</small></h1>
+        <h1><%= I18n.l Date.today, :format => "%A, %d de %B de %Y"  %></h1>
       </div>
+      <% end %>
       <div class="row">
         <div class="span10">
-          <h2>Main content</h2>
           <% if notice %>
           <div class="alert-message block-message success">
             <p><%= notice %></p>
@@ -73,7 +75,16 @@
           <%= yield %>
         </div>
         <div class="span4">
-          <h3>Secondary content</h3>
+          <h3><span class="label notice">Novidades</span></h3>
+          <dl>
+            <dt>Grupos</dt>
+            <dd>Possibilidade de gerenciar seus grupos. Com isso você pode fazer parte de quantos
+            grupos quiser e participar da votação de todos esses grupos.</dd>
+            <dt>Restaurantes</dt>
+            <dd>Você pode gerenciar as opções de restaurante e adicioná-los aos seus grupos.</dd>
+            <dt>Layout</dt>
+            <dd>Modificações no layout para permitir que as informações ficassem melhor agregadas.</dd>
+          </dl>
         </div>
       </div>
     </div>
