--- a/app/views/votos/_form.html.erb
+++ b/app/views/votos/_form.html.erb
@@ -22,5 +22,6 @@
 <div class="actions-options">
 <%= f.submit 'Votar', :class => 'btn primary'%>
 </div>
+<%= f.hidden_field :grupo_id %>
 <% end %>
 <% end %>
