--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,6 +72,11 @@
             <p><%= alert %></p>
           </div>
           <% end %>
+          <% if info %>
+          <div class="alert-message block-message info">
+            <p><%= info %></p>
+          </div>
+          <% end %>
           <%= yield %>
         </div>
         <div class="span4">
