--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,11 @@
   <div class="topbar">
     <div class="fill">
       <div class="container">
-        <a class="brand" href="/">Onde Vamos?</a>
+        <div id="nome_logo">
+        <a class="brand" href="/">Onde Vamos?
+        </a>
+        <!-- <img src="/images/beta.png" /> -->
+        </div>
         <ul class="nav">
           <% if usuario_signed_in? %><li><a href="/votos/home">Votação</a></li>
           <li><a href="/grupos">Grupos</a></li>
