--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,7 @@
       </div>
     </div>
     <footer>
-      <p>&copy; Hadros 2011</p>
+      <p>&copy; Hadros <%= I18n.l Date.today, :format => "%Y"  %></p>
     </footer>
   </div>
 </body>
