--- a/app/views/menu/sobre.html.erb
+++ b/app/views/menu/sobre.html.erb
@@ -3,7 +3,6 @@ onde vão para realizar suas atividades. Nossos serviços são como enquetes,
 porém de uma forma especializada.
 </p>
 <p>
-A idéia surgiu apartir de um grupo de colegas de trabalho em Fortaleza/CE que 
-sempre tinham que discutir na porta do prédio onde iriam para almoçar/lanchar e 
-coisas parecidas.
+A idéia surgiu apartir de um grupo de colegas de trabalho que  sempre tinham que discutir onde iriam 
+para almoçar/lanchar e  coisas parecidas.
 </p>
