--- a/public/stylesheets/ondevamos.css
+++ b/public/stylesheets/ondevamos.css
@@ -62,3 +62,12 @@ html, body {
 p.grupos {
   margin-bottom: 18px;
 }
+
+td span.label.autorizacao {
+  cursor:pointer;
+}
+
+a.link_autorizacao {
+  text-decoration: none;
+
+}
