--- a/app/views/grupos/index.html.erb
+++ b/app/views/grupos/index.html.erb
@@ -1,42 +1,48 @@
 <h2>Grupos</h2>
 
-<table class="zebra-striped">
-<% @grupos.each do |grupo| %>
+<table class="condensed-table zebra-striped">
   <tbody>
-    <tr>
-      <td><%= grupo.nome %></td>
-      <td>
-      <% if grupo.usuario == current_usuario %>
-      <%= link_to 'Usuários ('+grupo.usuarios.count.to_s+')', '/grupos/usuarios/'+grupo.id.to_s %>
-      <% end %>
-      </td>
-      <td>
-      <% if grupo.usuario == current_usuario %>
-      <%= link_to 'Restaurantes ('+grupo.restaurantes.count.to_s+')', grupo_path(grupo) %>
-      <% end %>
-      </td>
-      <td>
-      <% if grupo.usuario != current_usuario %>
-      <% if grupo.usuarios.include? current_usuario && autorizado(grupo, current_usuario) %>
-      <%= link_to 'Desassociar-se', '/grupos/desassociarUsuario/'+grupo.id.to_s, :confirm => 'Tem certeza disso?', :method => :delete %>
-      <% else %>
-      <%= link_to 'Associar-se', '/grupos/associarUsuario/'+grupo.id.to_s, :confirm => 'Tem certeza disso?', :method => :get %>
-      <% end %>
-      <% end %>
-      </td>
-      <td>
-      <% if grupo.usuario == current_usuario %>
-      <%= link_to 'Editar', edit_grupo_path(grupo) %>
-      <% end %>
-      </td>
-      <td>
-      <% if grupo.usuario == current_usuario %>
-      <%= link_to 'Remover', grupo, :confirm => 'Tem certeza disso?', :method => :delete %>
-      <% end %>
-      </td>
-    </tr>
+  <% @grupos.each do |grupo| %>
+      <tr>
+        <td>
+        <% if verificar_propietario(current_usuario, grupo.usuario) %>
+        <span class="label notice">P</span>
+        <% end %>
+        <%= grupo.nome %></td>
+        <td>
+        <% if verificar_propietario(current_usuario, grupo.usuario) %>
+        <%= link_to 'Usuários ('+grupo.usuarios.count.to_s+')', '/grupos/usuarios/'+grupo.id.to_s %>
+        <% end %>
+        </td>
+        <td>
+        <% if verificar_propietario(current_usuario, grupo.usuario) %>
+        <%= link_to 'Restaurantes ('+grupo.restaurantes.count.to_s+')', grupo_path(grupo) %>
+        <% end %>
+        </td>
+        <td>
+        <% if !verificar_propietario(current_usuario, grupo.usuario) %>
+        <% if autorizado(grupo, current_usuario) %>
+        <%= link_to 'Desassociar-se', '/grupos/desassociarUsuario/'+grupo.id.to_s, :confirm => 'Tem certeza disso?', :method => :delete %>
+        <% elsif aguardandoAutorizacao(grupo, current_usuario) %>
+        Aguardando autorização...
+        <% else %>
+        <%= link_to 'Associar-se', '/grupos/associarUsuario/'+grupo.id.to_s, :confirm => 'Tem certeza disso?', :method => :get %>
+        <% end %>
+        <% end %>
+        </td>
+        <td>
+        <% if verificar_propietario(current_usuario, grupo.usuario) %>
+        <%= link_to 'Editar', edit_grupo_path(grupo) %>
+        <% end %>
+        </td>
+        <td>
+        <% if verificar_propietario(current_usuario, grupo.usuario) %>
+        <%= link_to 'Remover', grupo, :confirm => 'Tem certeza disso?', :method => :delete %>
+        <% end %>
+        </td>
+      </tr>
+  <% end %>
   <tbody>
-<% end %>
 </table>
 
 <%= link_to 'Criar um Grupo', new_grupo_path, :class => 'btn primary' %>
