--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Ondevamos</title>
   <%= stylesheet_link_tag 'bootstrap.css', 'ondevamos.css' %>
-  <%= javascript_include_tag 'jquery.js', 'jquery-ui.min.js', 'jquery_ujs.js', 'application.js' %>
+  <%= javascript_include_tag 'jquery.js', 'jquery-ui.min.js', 'jquery_ujs.js', 'application.js', 'bootstrap-twipsy.js', 'bootstrap-popover.js' %>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <%= csrf_meta_tag %>
   <% if Rails.env.production? %>
