--- a/public/stylesheets/ondevamos.css
+++ b/public/stylesheets/ondevamos.css
@@ -13,7 +13,7 @@ html, body {
   width: 820px;
 }
 
-.content {
+html body div.container div.content {
   background-color: #FFFFFF;
   border-radius: 0 0 6px 6px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
@@ -27,13 +27,13 @@ html, body {
   padding: 20px 20px 10px;
 }
 
-.content .span4 {
+html body div.container div.content .span4 {
   border-left: 1px solid #EEEEEE;
   margin-left: 0;
   padding-left: 19px;
 }
 
-.content .span10, .content .span4 {
+html body div.container div.content .span10, .content .span4 {
   min-height: 100px;
 }
 
