--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,6 +81,8 @@
         <div class="span4">
           <h3><span class="label notice">Novidades</span></h3>
           <dl>
+            <dt>Moderação</dt>
+            <dd>Agora os proprietários dos grupos podem moderar os pedidos de associação.</dd>
             <dt>Grupos</dt>
             <dd>Possibilidade de gerenciar seus grupos. Com isso você pode fazer parte de quantos
             grupos quiser e participar da votação de todos esses grupos.</dd>
