--- a/app/views/mensageiro/autorizacao.html.erb
+++ b/app/views/mensageiro/autorizacao.html.erb
@@ -8,7 +8,7 @@
 
 <p>Para aceitá-lo em seu grupo bastar clicar no link a seguir:</p>
 
-<%= link_to 'Aceitar usuário', url_for(:host => ActionMailer::Base.default_url_options[:host], :controller => "grupos", :action => "autorizar")+'/'+@membro.id %>
+<%= link_to 'Aceitar usuário', url_for(:only_path => false, :controller=>"grupos", :action=>"autorizarMembro", :membro_id => @membro.id) %>
 
 <p>Se você não conseguir clicar no endereço, copie o endereço abaixo e cole ba barra de endereço de seu navegador.</p>
-<%= url_for(:host => ActionMailer::Base.default_url_options[:host], :controller => "grupos", :action => "autorizar")+'/'+@membro.id %>
+<%= url_for(:only_path => false, :controller=>"grupos", :action=>"autorizarMembro", :membro_id => @membro.id) %>
